@@ -13,15 +13,6 @@ struct passwd *getpwuid(unsigned int uid)
     return NULL;
 }
 
-struct passwd *getpwnam(char *name)
-{
-    /* This will lead expand_path() to complain about "no such user"
-       anytime someone tries to use ~user.  That is better than giving
-       some bogus answer.  expand_path is the only relevant call to
-       this function.  */
-    return NULL;
-}
-
 char *getlogin()
 {
   static char login[256];
